2002-05-14  Peter Stephenson  <pws@csr.com>

	* 17162: Src/Modules/tcp.c: prevent warning on gethostbyaddr()
	arguments.

	* 17161: Src/Modules/tcp.c: length parameter to accept() wasn't
	initialised, causing random failures.

2002-05-14  Sven Wischnowsky  <wischnow@zsh.org>

	* 17148: Completion/Base/Utility/_arguments,
	Completion/Unix/Type/_services: fix for _arguments: don't use
	argument-tag when completing options; fix for _services: leave
	loop when matches were produced

	* 17147: Completion/Base/Utility/_describe,
	Completion/Zsh/Command/_zstyle, Doc/Zsh/compsys.yo,
	Src/Zle/computil.c: allow users to give the maximum number of
	display-columns the matches should take up via the style
	currently named max-match-length

	* 17146: Doc/Zsh/compsys.yo: fix doc for _describe, mention -t
	option

2002-05-13  Peter Stephenson  <pws@csr.com>

	* 17120, 17121: Src/init.c: work around problem that NIS ties up a
	file descriptor by forcing it to be at least 10 so it's not in the
	range a user can open.

2002-05-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 17135: Src/Zle/compcore.c, Src/Zle/zle_tricky.c: fix for
	unquoting with `compset -q' with singly and doubly quoted
	strings

2002-05-12  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* c.f. 17128: Doc/Makefile.in: back out changes accidentally
	committed along with 17081.

2002-05-12 Andrej Borsenkow  <bor@zsh.org>

	* unposted: Completion/Redhat/Command/_service: fix context
	name for tag-order style. For now comment it out because it
	does not work

2002-05-10  Peter Stephenson  <pws@csr.com>

	* users/4951: Doc/Zsh/builtins.yo: make it clearer that ulimit
	defaults to soft limits.

2002-05-08  Peter Stephenson  <pws@csr.com>

	* 17102: Src/Modules/tcp.c: looking up TCP sessions by fd returned
	the wrong pointer.

	* 17097: Src/Modules/tcp.c: closing all TCP sessions referenced
	freed memory.

	* Unposted: Src/Modules/zselect.c: remove an unused counter.
